deploy/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: glih
  labels:
    app.kubernetes.io/name: glih
    app.kubernetes.io/instance: production
